--- a/build.xml
+++ b/build.xml
@@ -61,7 +61,7 @@
     <target name="build-subprojects"/>
     <target depends="init" name="build-project">
         <echo message="${ant.project.name}: ${ant.file}"/>
-        <javac debug="true" debuglevel="${debuglevel}" destdir="build/classes" includeantruntime="false" source="${source}" target="${target}">
+        <javac debug="true" debuglevel="${debuglevel}" destdir="build/classes" includeantruntime="false" > <!-- source="${source}" target="${target}"> -->
             <src path="src"/>
             <classpath refid="mydashboard.classpath"/>
         </javac>
